--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,9 @@
 {
-  presets: [
-    [
-      '@babel/preset-env',
-      {
-        modules: false
-      }
-    ],
-    '@babel/preset-react'
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-typescript"
   ],
-  plugins: [
-    'react-hot-loader/babel'
+  "plugins": [
+    "react-hot-loader/babel"
   ]
 }
