--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@hot-loader/react-dom": "^17.0.0-rc.2",
+    "@types/chai": "^4.2.12",
+    "@types/jest": "^26.0.14",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
+    "chai": "^4.2.0",
     "chalk": "^4.1.0",
     "eslint": "^7.10.0",
     "eslint-plugin-react": "^7.21.3",
