--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       "prettier --write"
     ],
     "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint"
+      "eslint --fix"
     ]
   },
   "keywords": [],
